--- a/index.html
+++ b/index.html
@@ -385,24 +385,24 @@
             // Плейлист - замените ссылки на ваши треки в GitHub
             const playlist = [
                 {
-                    title: "Loft Ambient",
-                    artist: "Атмосферный лофт",
-                    src: "https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/audio/track1.mp3"
+                    title: "Spiegel im Spiegel",
+                    artist: "Arvo PartArvo Pärt",
+                    src: "https://github.com/EdHight/lamp_player/blob/main/Arvo_P%C3%A4rt-Spiegel_im_Spiegel.mp3"
                 },
                 {
-                    title: "Concrete Dreams",
-                    artist: "Индастриал волны",
-                    src: "https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/audio/track2.mp3"
+                    title: "Gymnopédie_No.1",
+                    artist: "Erik Satie",
+                    src: "https://github.com/EdHight/lamp_player/blob/main/Erik_Satie-Gymnop%C3%A9die_No.1.mp3"
                 },
                 {
-                    title: "Urban Echo",
-                    artist: "Городские ритмы",
-                    src: "https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/audio/track3.mp3"
+                    title: "Nuvole Bianche",
+                    artist: "Fabio Angelini",
+                    src: "https://github.com/EdHight/lamp_player/blob/main/Fabio_Angelini-Nuvole_Bianche.mp3"
                 },
                 {
-                    title: "Factory Pulse",
-                    artist: "Индустриальный бит",
-                    src: "https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/audio/track4.mp3"
+                    title: "Ma Defanie",
+                    artist: "Saraabb",
+                    src: "https://github.com/EdHight/lamp_player/blob/main/Saraabb-Ma_Defanie.mp3"
                 }
             ];
 
