--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOFT Music | Concrete player</title>
+    <title> Music | Concrete lamp player</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -307,7 +307,7 @@
         
         <div class="header">
             <h1><i class="fas fa-volume-up"></i> Concrete Player</h1>
-            <p>just relax</p>
+            <p></p>
         </div>
 
         <div class="nfc-prompt" id="nfcPrompt">
@@ -386,11 +386,11 @@
             const playlist = [
                 {
                     title: "Spiegel im Spiegel",
-                    artist: "Arvo PartArvo Pärt",
+                    artist: "Arvo Pärt",
                     src: "https://github.com/EdHight/lamp_player/blob/main/Arvo_P%C3%A4rt-Spiegel_im_Spiegel.mp3"
                 },
                 {
-                    title: "Gymnopédie_No.1",
+                    title: "Gymnopédie No.1",
                     artist: "Erik Satie",
                     src: "https://github.com/EdHight/lamp_player/blob/main/Erik_Satie-Gymnop%C3%A9die_No.1.mp3"
                 },
