--- a/index.html
+++ b/index.html
@@ -384,27 +384,27 @@
 
             // Плейлист - замените ссылки на ваши треки в GitHub
             const playlist = [
-                {
-                    title: "Spiegel im Spiegel",
-                    artist: "Arvo Pärt",
-                    src: "https://github.com/EdHight/lamp_player/blob/main/audio/Arvo_P%C3%A4rt-Spiegel_im_Spiegel.mp3"
-                },
-                {
-                    title: "Gymnopédie No.1",
-                    artist: "Erik Satie",
-                    src: "https://github.com/EdHight/lamp_player/blob/main/audio/Erik_Satie-Gymnop%C3%A9die_No.1.mp3"
-                },
-                {
-                    title: "Nuvole Bianche",
-                    artist: "Fabio Angelini",
-                    src: "https://github.com/EdHight/lamp_player/blob/main/audio/Fabio_Angelini-Nuvole_Bianche.mp3"
-                },
-                {
-                    title: "Ma Defanie",
-                    artist: "Saraabb",
-                    src: "https://github.com/EdHight/lamp_player/blob/main/audio/Saraabb-Ma_Defanie.mp3"
-                }
-            ];
+    {
+        title: "Spiegel im Spiegel",
+        artist: "Arvo Pärt",
+        src: "https://raw.githubusercontent.com/EdHight/lamp_player/main/audio/Arvo_P%C3%A4rt-Spiegel_im_Spiegel.mp3"
+    },
+    {
+        title: "Gymnopédie No.1",
+        artist: "Erik Satie",
+        src: "https://raw.githubusercontent.com/EdHight/lamp_player/main/audio/Erik_Satie-Gymnop%C3%A9die_No.1.mp3"
+    },
+    {
+        title: "Nuvole Bianche",
+        artist: "Fabio Angelini",
+        src: "https://raw.githubusercontent.com/EdHight/lamp_player/main/audio/Fabio_Angelini-Nuvole_Bianche.mp3"
+    },
+    {
+        title: "Ma Defanie",
+        artist: "Saraabb",
+        src: "https://raw.githubusercontent.com/EdHight/lamp_player/main/audio/Saraabb-Ma_Defanie.mp3"
+    }
+];
 
             let currentTrackIndex = 0;
             let isPlaying = false;
